--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ground Zero - About</title>
+    <title>Ground Zero - Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -48,8 +48,8 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-            <strong>About</strong>
-          </li>
+                          <a href="index.html" title="About">About</a>
+            </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
@@ -72,8 +72,8 @@
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
                       <li class="none">
-                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
-            </li>
+            <strong>Project Summary</strong>
+          </li>
               </ul>
         </li>
                                                                                                                                                                                                   <li class="collapsed">
@@ -90,8 +90,46 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About Ground Zero<a name="About_Ground_Zero"></a></h2><a name="About_Ground_Zero"></a>
-<p>TBD</p></div>
+<h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a>
+<div class="section">
+<h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Field</th>
+<th>Value</th></tr>
+<tr class="b">
+<td>Name</td>
+<td>Ground Zero</td></tr>
+<tr class="a">
+<td>Description</td>
+<td>TBD</td></tr>
+<tr class="b">
+<td>Homepage</td>
+<td><a class="externalLink" href="http://weltraumschaf.github.com/GroundZero/">http://weltraumschaf.github.com/GroundZero/</a></td></tr></table></div>
+<div class="section">
+<h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
+<p>This project does not belong to an organization.</p></div>
+<div class="section">
+<h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Field</th>
+<th>Value</th></tr>
+<tr class="b">
+<td>GroupId</td>
+<td>de.weltraumschaf</td></tr>
+<tr class="a">
+<td>ArtifactId</td>
+<td>groundzero</td></tr>
+<tr class="b">
+<td>Version</td>
+<td>1.0.0-SNAPSHOT</td></tr>
+<tr class="a">
+<td>Type</td>
+<td>jar</td></tr>
+<tr class="b">
+<td>JDK Rev</td>
+<td>1.7</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
