Wagon: Deploying site to repository

--- a/index.html
+++ b/index.html
@@ -182,9 +182,29 @@
         <div id="bodyColumn"  class="span10" >
                                   
             <h1>Welcome to the Ground Zero Project</h1>
+<p>A tool to generate line based suppression files for Checkstyle.</p>
 <div class="section">
 <h2>What is Ground Zero<a name="What_is_Ground_Zero"></a></h2>
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p></div>
+<p>TBD</p></div>
+<div class="section">
+<h2>Build and Install<a name="Build_and_Install"></a></h2>
+<p>A current <a class="externalLink" href="http://maven.apache.org/">Maven</a> installation is required.</p>
+<p>Clone this repository and change into in:</p>
+
+<div class="source">
+<pre>$ git clone https://github.com/Weltraumschaf/GroundZero.git
+$ cd GroundZero
+</pre></div>
+<p>Build with maven:</p>
+
+<div class="source">
+<pre>$ mvn clean install
+</pre></div>
+<p>Have fun:</p>
+
+<div class="source">
+<pre>$ ./bin/groundzero -h
+</pre></div></div>
                   </div>
             </div>
           </div>
