--- a/integration.html
+++ b/integration.html
@@ -58,7 +58,7 @@
         </li>
       <li class="divider ">/</li>
             <li class="">
-                    <a href="http://www.weltraumschaf.de:8080/job/Lafayette-Server/" class="externalLink" title="Continious Integration">
+                    <a href="http://ci.weltraumschaf.de/job/GroundZero/" class="externalLink" title="Continious Integration">
         Continious Integration</a>
         </li>
       <li class="divider ">/</li>
@@ -190,7 +190,7 @@
 <h2>Access<a name="Access"></a></h2><a name="Access"></a>
 <p>The following is a link to the continuous integration system used by the project.</p>
 <div class="source">
-<pre><a class="externalLink" href="http://www.weltraumschaf.de:8080/job/GroundZero/">http://www.weltraumschaf.de:8080/job/GroundZero/</a></pre></div></div>
+<pre><a class="externalLink" href="http://ci.weltraumschaf.de/job/GroundZero/">http://ci.weltraumschaf.de/job/GroundZero/</a></pre></div></div>
 <div class="section">
 <h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a>
 <p>No notifiers are defined. Please check back at a later date.</p></div>
