--- a/taglist.html
+++ b/taglist.html
@@ -58,7 +58,7 @@
         </li>
       <li class="divider ">/</li>
             <li class="">
-                    <a href="http://www.weltraumschaf.de:8080/job/Lafayette-Server/" class="externalLink" title="Continious Integration">
+                    <a href="http://ci.weltraumschaf.de/job/GroundZero/" class="externalLink" title="Continious Integration">
         Continious Integration</a>
         </li>
       <li class="divider ">/</li>
