Wagon: Deploying site to repository

--- a/changelog.html
+++ b/changelog.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-07-12</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 1.0.0</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 1.0.1</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -195,12 +195,36 @@
 <p>Total number of changed sets: 1</p>
 <div class="section">
 <h3>Changes between 2013-06-12 and 2013-07-13<a name="Changes_between_2013-06-12_and_2013-07-13"></a></h3>
-<p>Total commits: 79<br />Total number of files changed: 51</p>
+<p>Total commits: 85<br />Total number of files changed: 51</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Timestamp</th>
 <th>Author</th>
 <th>Details</th></tr>
+<tr class="b">
+<td>2013-07-12 22:50:23</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/pom.xml"><b>pom.xml</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/pom.xml?rev=d06f15cfc3429a3dbab1baca105c33b1a81d41cd&amp;content-type=text/vnd.viewcvs-markup">v d06f15cfc3429a3dbab1baca105c33b1a81d41cd</a><br /><br />[maven-release-plugin] prepare release 1.0.1</td></tr>
+<tr class="a">
+<td>2013-07-12 22:47:08</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/GroundZero.java">src/main/java/de/weltraumschaf/groundzero/<b>GroundZero.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/GroundZero.java?rev=09396e17aefbfb76fab0f243a6acbe8fa4c93424&amp;content-type=text/vnd.viewcvs-markup">v 09396e17aefbfb76fab0f243a6acbe8fa4c93424</a><br /><br />Fix Checkstyle warnings.</td></tr>
+<tr class="b">
+<td>2013-07-12 22:43:12</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/bin/groundzero.jar">bin/<b>groundzero.jar</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/bin/groundzero.jar?rev=6d9413eecae068ab832e00c9e47c8e70434949ce&amp;content-type=text/vnd.viewcvs-markup">v 6d9413eecae068ab832e00c9e47c8e70434949ce</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/GroundZero.java">src/main/java/de/weltraumschaf/groundzero/<b>GroundZero.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/GroundZero.java?rev=6d9413eecae068ab832e00c9e47c8e70434949ce&amp;content-type=text/vnd.viewcvs-markup">v 6d9413eecae068ab832e00c9e47c8e70434949ce</a><br /><br />Save files earlier.</td></tr>
+<tr class="a">
+<td>2013-07-12 22:31:07</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/GroundZero.java">src/main/java/de/weltraumschaf/groundzero/<b>GroundZero.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/GroundZero.java?rev=56b47147027960ef2e052f236e2fa8c500ffbc18&amp;content-type=text/vnd.viewcvs-markup">v 56b47147027960ef2e052f236e2fa8c500ffbc18</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/SuppressionGenerator.java">src/main/java/de/weltraumschaf/groundzero/<b>SuppressionGenerator.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/SuppressionGenerator.java?rev=56b47147027960ef2e052f236e2fa8c500ffbc18&amp;content-type=text/vnd.viewcvs-markup">v 56b47147027960ef2e052f236e2fa8c500ffbc18</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/test/java/de/weltraumschaf/groundzero/GroundZeroTest.java">src/test/java/de/weltraumschaf/groundzero/<b>GroundZeroTest.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/test/java/de/weltraumschaf/groundzero/GroundZeroTest.java?rev=56b47147027960ef2e052f236e2fa8c500ffbc18&amp;content-type=text/vnd.viewcvs-markup">v 56b47147027960ef2e052f236e2fa8c500ffbc18</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/test/java/de/weltraumschaf/groundzero/SuppressionGeneratorTest.java">src/test/java/de/weltraumschaf/groundzero/<b>SuppressionGeneratorTest.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/test/java/de/weltraumschaf/groundzero/SuppressionGeneratorTest.java?rev=56b47147027960ef2e052f236e2fa8c500ffbc18&amp;content-type=text/vnd.viewcvs-markup">v 56b47147027960ef2e052f236e2fa8c500ffbc18</a><br /><br />Move file name generation into generator.</td></tr>
+<tr class="b">
+<td>2013-07-12 22:19:41</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/ExitCodeImpl.java">src/main/java/de/weltraumschaf/groundzero/<b>ExitCodeImpl.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/ExitCodeImpl.java?rev=c7c2b2a968bab962603550e605471dc1528e5e45&amp;content-type=text/vnd.viewcvs-markup">v c7c2b2a968bab962603550e605471dc1528e5e45</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/model/CheckstyleReport.java">src/main/java/de/weltraumschaf/groundzero/model/<b>CheckstyleReport.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/model/CheckstyleReport.java?rev=c7c2b2a968bab962603550e605471dc1528e5e45&amp;content-type=text/vnd.viewcvs-markup">v c7c2b2a968bab962603550e605471dc1528e5e45</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/model/CheckstyleSuppressions.java">src/main/java/de/weltraumschaf/groundzero/model/<b>CheckstyleSuppressions.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/main/java/de/weltraumschaf/groundzero/model/CheckstyleSuppressions.java?rev=c7c2b2a968bab962603550e605471dc1528e5e45&amp;content-type=text/vnd.viewcvs-markup">v c7c2b2a968bab962603550e605471dc1528e5e45</a><br /><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/test/java/de/weltraumschaf/groundzero/SuppressionGeneratorTest.java">src/test/java/de/weltraumschaf/groundzero/<b>SuppressionGeneratorTest.java</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/src/test/java/de/weltraumschaf/groundzero/SuppressionGeneratorTest.java?rev=c7c2b2a968bab962603550e605471dc1528e5e45&amp;content-type=text/vnd.viewcvs-markup">v c7c2b2a968bab962603550e605471dc1528e5e45</a><br /><br />Fix checkstyle warnings.</td></tr>
+<tr class="a">
+<td>2013-07-12 22:05:56</td>
+<td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/pom.xml"><b>pom.xml</b></a> <a class="externalLink" href="https://github.com/Weltraumschaf/GroundZero.git/pom.xml?rev=ad62d395e92d72870cc754624b655a4e2e241dec&amp;content-type=text/vnd.viewcvs-markup">v ad62d395e92d72870cc754624b655a4e2e241dec</a><br /><br />[maven-release-plugin] prepare for next development iteration</td></tr>
 <tr class="b">
 <td>2013-07-12 22:05:49</td>
 <td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
