--- a/taglist.html
+++ b/taglist.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-07-12</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 1.0.0</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 1.0.1</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -199,38 +199,18 @@
 <th>Total number of occurrences</th>
 <th>Tag strings used by tag class</th></tr>
 <tr class="b">
-<td><a href="#tag_class_3">Bugs to fix</a></td>
-<td>1</td>
+<td>Bugs to fix</td>
+<td>0</td>
 <td>fixme</td></tr>
 <tr class="a">
-<td><a href="#tag_class_2">Things to do</a></td>
-<td>1</td>
+<td>Things to do</td>
+<td>0</td>
 <td>todo</td></tr>
 <tr class="b">
 <td>This may be considered.</td>
 <td>0</td>
 <td>xxx</td></tr></table>
-<p>Each tag is detailed below:</p>
-<div class="section">
-<h3><a name="tag_class_3">Bugs to fix</a><a name="Bugs_to_fix"></a></h3>
-<p><b>Number of occurrences found in the code: 1</b></p>
-<table border="0" class="table table-striped">
-<tr class="a">
-<th>de.weltraumschaf.groundzero.GroundZero</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Generate and save directly after parsing.</td>
-<td>128</td></tr></table></div>
-<div class="section">
-<h3><a name="tag_class_2">Things to do</a><a name="Things_to_do"></a></h3>
-<p><b>Number of occurrences found in the code: 1</b></p>
-<table border="0" class="table table-striped">
-<tr class="a">
-<th>de.weltraumschaf.groundzero.GroundZero</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Print to STDOUT which file is parsed and which one is saved.</td>
-<td>31</td></tr></table></div></div>
+<p>Each tag is detailed below:</p></div>
                   </div>
             </div>
           </div>
