Wagon: Deploying site to repository

--- a/jdepend-report.html
+++ b/jdepend-report.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-07-26</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 1.1.0</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 1.1.1</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -233,14 +233,14 @@
 <td>1</td></tr>
 <tr class="a">
 <td><a href="#de.weltraumschaf.groundzero.filter">de.weltraumschaf.groundzero.filter</a></td>
-<td>5</td>
-<td>4</td>
+<td>7</td>
+<td>6</td>
 <td>1</td>
 <td>1</td>
 <td>4</td>
-<td>20.0%</td>
+<td>14.0%</td>
 <td>80.0%</td>
-<td>0.0%</td>
+<td>6.0%</td>
 <td>1</td></tr>
 <tr class="b">
 <td><a href="#de.weltraumschaf.groundzero.model">de.weltraumschaf.groundzero.model</a></td>
@@ -301,9 +301,9 @@
 <tr class="a">
 <td>1</td>
 <td>4</td>
-<td>20.0%</td>
+<td>14.0%</td>
 <td>80.0%</td>
-<td>0.0%</td></tr></table>
+<td>6.0%</td></tr></table>
 <table border="0" class="table table-striped">
 <tr class="b">
 <th>Abstract Classes</th>
@@ -312,7 +312,7 @@
 <th>Uses Packages</th></tr>
 <tr class="a">
 <td>de.weltraumschaf.groundzero.filter.Filter<br /></td>
-<td>de.weltraumschaf.groundzero.filter.FilterChain<br />de.weltraumschaf.groundzero.filter.PathNormalizer<br />de.weltraumschaf.groundzero.filter.PathPrefixRemover<br />de.weltraumschaf.groundzero.filter.StringFilters<br /></td>
+<td>de.weltraumschaf.groundzero.filter.FileNameExtender<br />de.weltraumschaf.groundzero.filter.FilterChain<br />de.weltraumschaf.groundzero.filter.PathNormalizer<br />de.weltraumschaf.groundzero.filter.PathPrefixRemover<br />de.weltraumschaf.groundzero.filter.RegeExEscaper<br />de.weltraumschaf.groundzero.filter.StringFilters<br /></td>
 <td>de.weltraumschaf.groundzero.transform<br /></td>
 <td>com.google.common.collect<br />java.lang<br />java.util<br />org.apache.commons.lang3<br /></td></tr></table><a name="de.weltraumschaf.groundzero.model"></a>
 <h3>de.weltraumschaf.groundzero.model<a name="de.weltraumschaf.groundzero.model"></a></h3>
