--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-07-26</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 1.1.0</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 1.1.1</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -212,7 +212,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>19</td></tr>
+<td>20</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -220,7 +220,7 @@
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is an incremental version update</td>
-<td>2</td></tr>
+<td>1</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is a minor version update</td>
@@ -260,10 +260,10 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-antrun-plugin</td>
-<td>1.4</td>
+<td>1.5</td>
 <td></td>
 <td></td>
-<td><b>1.5</b></td>
+<td><b>1.6</b></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="b">
@@ -320,10 +320,10 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-dependency-plugin</td>
-<td>2.3</td>
+<td>2.4</td>
 <td></td>
 <td></td>
-<td><b>2.4</b></td>
+<td><b>2.5</b></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="b">
@@ -390,20 +390,20 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-release-plugin</td>
-<td>2.2</td>
+<td>2.3</td>
 <td></td>
-<td><b>2.2.1</b></td>
-<td><b>2.3</b></td>
+<td><b>2.3.1</b></td>
+<td><b>2.4</b></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="a">
-<td><img src="images/icon_warning_sml.gif" alt="" /></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-resources-plugin</td>
-<td>2.5</td>
-<td></td>
-<td></td>
 <td><b>2.6</b></td>
+<td></td>
+<td></td>
+<td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="b">
@@ -420,10 +420,10 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-surefire-plugin</td>
-<td>2.12</td>
+<td>2.13</td>
 <td></td>
-<td><b>2.12.1</b></td>
-<td><b>2.13</b></td>
+<td></td>
+<td><b>2.14</b></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="b">
@@ -551,10 +551,10 @@
 <td>maven-antrun-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>1.4</td></tr>
+<td>1.5</td></tr>
 <tr class="a">
 <th width="80%">Newer versions</th>
-<td><b>1.5</b>&#160;<i>Next Minor</i><br />1.6<br /><b>1.7</b>&#160;<i>Latest Minor</i></td></tr></table></div>
+<td><b>1.6</b>&#160;<i>Next Minor</i><br /><b>1.7</b>&#160;<i>Latest Minor</i></td></tr></table></div>
 <div class="section">
 <h3>Plugin org.apache.maven.plugins:maven-assembly-plugin<a name="Plugin_org.apache.maven.plugins:maven-assembly-plugin"></a></h3>
 <table border="0" class="table table-striped">
@@ -644,10 +644,10 @@
 <td>maven-dependency-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>2.3</td></tr>
+<td>2.4</td></tr>
 <tr class="a">
 <th width="80%">Newer versions</th>
-<td><b>2.4</b>&#160;<i>Next Minor</i><br />2.5<br />2.5.1<br />2.6<br />2.7<br /><b>2.8</b>&#160;<i>Latest Minor</i></td></tr></table></div>
+<td><b>2.5</b>&#160;<i>Next Minor</i><br />2.5.1<br />2.6<br />2.7<br /><b>2.8</b>&#160;<i>Latest Minor</i></td></tr></table></div>
 <div class="section">
 <h3>Plugin org.apache.maven.plugins:maven-deploy-plugin<a name="Plugin_org.apache.maven.plugins:maven-deploy-plugin"></a></h3>
 <table border="0" class="table table-striped">
@@ -767,16 +767,16 @@
 <td>maven-release-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>2.2</td></tr>
+<td>2.3</td></tr>
 <tr class="a">
 <th width="80%">Newer versions</th>
-<td><b>2.2.1</b>&#160;<i>Next Incremental</i><br /><b>2.2.2</b>&#160;<i>Latest Incremental</i><br /><b>2.3</b>&#160;<i>Next Minor</i><br />2.3.1<br />2.3.2<br />2.4<br /><b>2.4.1</b>&#160;<i>Latest Minor</i></td></tr></table></div>
+<td><b>2.3.1</b>&#160;<i>Next Incremental</i><br /><b>2.3.2</b>&#160;<i>Latest Incremental</i><br /><b>2.4</b>&#160;<i>Next Minor</i><br /><b>2.4.1</b>&#160;<i>Latest Minor</i></td></tr></table></div>
 <div class="section">
 <h3>Plugin org.apache.maven.plugins:maven-resources-plugin<a name="Plugin_org.apache.maven.plugins:maven-resources-plugin"></a></h3>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th width="80%">Status</th>
-<td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer minor version available. Minor updates are sometimes passive.</td></tr>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
 <tr class="b">
 <th width="80%">Group Id</th>
 <td>org.apache.maven.plugins</td></tr>
@@ -785,10 +785,7 @@
 <td>maven-resources-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>2.5</td></tr>
-<tr class="a">
-<th width="80%">Newer versions</th>
-<td><b>2.6</b>&#160;<i>Next Minor</i></td></tr></table></div>
+<td>2.6</td></tr></table></div>
 <div class="section">
 <h3>Plugin org.apache.maven.plugins:maven-site-plugin<a name="Plugin_org.apache.maven.plugins:maven-site-plugin"></a></h3>
 <table border="0" class="table table-striped">
@@ -809,7 +806,7 @@
 <table border="0" class="table table-striped">
 <tr class="a">
 <th width="80%">Status</th>
-<td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
+<td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer minor version available. Minor updates are sometimes passive.</td></tr>
 <tr class="b">
 <th width="80%">Group Id</th>
 <td>org.apache.maven.plugins</td></tr>
@@ -818,10 +815,10 @@
 <td>maven-surefire-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>2.12</td></tr>
+<td>2.13</td></tr>
 <tr class="a">
 <th width="80%">Newer versions</th>
-<td><b>2.12.1</b>&#160;<i>Next Incremental</i><br />2.12.2<br />2.12.3<br /><b>2.12.4</b>&#160;<i>Latest Incremental</i><br /><b>2.13</b>&#160;<i>Next Minor</i><br />2.14<br />2.14.1<br /><b>2.15</b>&#160;<i>Latest Minor</i></td></tr></table></div>
+<td><b>2.14</b>&#160;<i>Next Minor</i><br />2.14.1<br /><b>2.15</b>&#160;<i>Latest Minor</i></td></tr></table></div>
 <div class="section">
 <h3>Plugin org.codehaus.mojo:findbugs-maven-plugin<a name="Plugin_org.codehaus.mojo:findbugs-maven-plugin"></a></h3>
 <table border="0" class="table table-striped">
